--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-   height: 80%;
+   height: 80.1vh;
    
 }
 
@@ -11,6 +11,6 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   background-image: url(../image/fondo.png);
+   background-color: transparent;
 }
 
