--- a/client/src/components/Orders/Paginated.module.css
+++ b/client/src/components/Orders/Paginated.module.css
@@ -9,7 +9,7 @@
   cursor: pointer;
   font-size: 1.2rem;
   background-color: #343a40;
-  color: white;
+  color: #ff01c6;;
   padding: 5px 10px;
   border-radius: 10px;
 }
@@ -19,8 +19,8 @@
 }
 
 #pagSeleccionada {
-  color: #ffffff;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #49ff18,
+  color: #ff01c6;;
+  text-shadow: 0 0 5px #ff01c6, 0 0 10px #ff01c6, 0 0 15px #ff01c6, 0 0 20px #49ff18,
     0 0 30px #49ff18, 0 0 40px #49ff18, 0 0 55px #49ff18, 0 0 75px #49ff18;
   cursor: default;
 }
