--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -177,8 +177,23 @@
 .iconLinkedIn {
   fill: #f0f0f0;
 }
+@media screen and (min-width: 500px) and (max-width: 872px) {
+  .mainAbout {
+    width: 40%;
+    height: 100%;
+    margin-top: 2%;
+  }
+  .parendAbout {
+    margin-left: 18%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    gap: 10%;
+  }
 
-@media screen and (max-width: 1366px) {
+}
+@media screen and (min-width: 873px) and (max-width: 1366px) {
   .mainAbout {
     width: 100%;
     height: 72vh;
@@ -193,7 +208,7 @@
   }
 }
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
-@media screen and (max-width: 1728px)  {
+@media screen and  (min-width: 1367px) and (max-width: 1728px)  {
   .parendAbout {
     margin-left: 12%;
   }
