--- a/client/src/components/Favs/favs.css
+++ b/client/src/components/Favs/favs.css
@@ -1,7 +1,7 @@
 .favsContainer{
     /* border: 1px solid black; */
     width: 80%;
-    height: 74.1vh;
+    height: 75.8vh;
     margin: auto;
     /* display: flex; */
     flex-direction: column;
@@ -42,6 +42,10 @@
 }
 .btnFavs{
     margin-left: -30px;
+}
+.heartContainer{
+    margin: auto;
+    width: 78%;
 }
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
 @media screen and (max-width: 1366px) {
