--- a/client/src/components/Profile/Avatares.css
+++ b/client/src/components/Profile/Avatares.css
@@ -55,6 +55,10 @@ border-radius: 73px 73px 73px 73px;
     margin-right: 30px;
 }
 
+.btnAvatarHide{
+    display: none;
+}
+
 #SeleccionadoImageAvatar{
     box-shadow: 0px 0px 43px 5px rgba(29,237,141,0.75);
 -webkit-box-shadow: 0px 0px 43px 5px rgba(29,237,141,0.75);
