--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -5,7 +5,7 @@ nav {
 	flex-direction: column;
 	align-items: stretch;
 	align-content: center;
-	z-index: 100;
+	/* z-index: 100; */
 }
 .listNav li a {
 	text-decoration: none;
@@ -78,7 +78,7 @@ nav {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 3000;
+	z-index: 1;
  }
  
  .ModalLogin {
@@ -86,7 +86,7 @@ nav {
 	left: 50%;
 	transform: translateX(-50%);
 	top: 15%;
-	z-index: 3001;
+	z-index: 2;
  }
 .btnLogin{
 	margin: auto;
