--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -1,6 +1,6 @@
 .mainAbout {
   width: 100%;
-  height: 76vh;
+  height: 74.9vh;
   margin: auto;
   margin-top: 2%;
   display: flex;
@@ -177,12 +177,20 @@
 .iconLinkedIn {
   fill: #f0f0f0;
 }
+.titleAbout{
+  margin: auto;
+  margin-left: 40%;
+  position: absolute;
+  font-size: 2em;
+}
+
 @media screen and (min-width: 500px) and (max-width: 872px) {
   .mainAbout {
     width: 40%;
     height: 100%;
     margin-top: 2%;
   }
+
   .parendAbout {
     margin-left: 18%;
     display: flex;
@@ -191,33 +199,50 @@
     align-items: center;
     gap: 10%;
   }
-
+  .titleAbout{
+    margin: auto;
+    margin-left: 28%;
+    position: relative;
+    font-size: 2em;
+  }
 }
+
 @media screen and (min-width: 873px) and (max-width: 1366px) {
   .mainAbout {
     width: 100%;
-    height: 72vh;
+    height: 56.3vh;
     margin-top: 2%;
   }
+
   .parendAbout {
     margin-left: 15%;
   }
+
   .cardAbout {
     width: 30vh;
     height: 45vh;
   }
+  .titleAbout{
+    margin: auto;
+    margin-left: 35%;
+    position: relative;
+    font-size: 1.5em;
+  }
 }
+
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
-@media screen and  (min-width: 1367px) and (max-width: 1728px)  {
+@media screen and (min-width: 1367px) and (max-width: 1728px) {
   .parendAbout {
     margin-left: 12%;
   }
 }
+
 /*----------Media Queries (UHD DEVICES) ----------*/
-@media screen and (min-width: 2040px) and (max-width: 2160px)  {
+@media screen and (min-width: 2040px) and (max-width: 2160px) {
   .parendAbout {
     margin-left: 7%;
   }
+
   .mainAbout {
     height: 77.9vh;
   }
