--- a/client/src/components/Orders/feedBack.css
+++ b/client/src/components/Orders/feedBack.css
@@ -1,6 +1,5 @@
 .boxprueba {
-  width: 15%;
-  min-width: 165px;
+  width: 225px;
   padding: 8px;
   border-radius: 10px;
   box-shadow: 5px 5px 8px 0px rgba(52, 58, 64, 0.75);
@@ -9,38 +8,80 @@
 
 .flexContainer {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   margin-bottom: 20px;
   padding: 5px 20px;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
+  /* align-content: center; */
+  z-index: 10;
 }
 
 .title {
   color: rgba(52, 58, 64, 0.75);
 }
-.containerFeedback{
+
+.containerFeedback {
   display: flex;
+  flex-direction: row;
+  max-height: 60vh;
 }
-.feedSubContainer{
+
+.feedSubContainer {
   width: 500px;
-  height: fit-content;
+  height: 65vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   overflow-y: scroll;
+  align-content: center;
+  margin-left: -200px;
+  margin-right: 100px;
 }
+
+.txtFeedback {
+  margin: 0 0 1em 0;
+  width: 230px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  font-size: 12px;
+  font-weight: bold;
+  text-overflow: ellipsis;
+}
+
+.txtFeedback textarea {
+  width: 225px;
+  height: fit-content;
+  height: max-content;
+  overflow: hidden;
+  resize: none;
+  border: none;
+  background-color: transparent;
+}
+.txtFeedback textarea:hover {
+  border: none;
+}
+
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
 @media screen and (max-width: 1366px) {
-  .feedSubContainer{
-    width: 400px;
+  .flexContainer {
+    height: 250px;
+    flex-direction: row;
+  }
+
+  .feedSubContainer {
+    width: 500px;
+  }
+
+  .containerFeedback {
+    max-height: 80vh;
   }
 }
+
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
-@media screen and (min-width: 1367px) and (max-width: 1728px)  {
+@media screen and (min-width: 1367px) and (max-width: 1728px) {}
 
-}
 /*----------Media Queries (HIGH DEVICES) ----------*/
-@media screen and (min-width: 2040px) and (max-width: 2161px)  {
-
-}
+@media screen and (min-width: 2040px) and (max-width: 2161px) {}
