--- a/client/src/components/PasarelaDePago/GoogleMapPasarela.css
+++ b/client/src/components/PasarelaDePago/GoogleMapPasarela.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin-top: -110px;
+    margin-top: -115px;
     gap: 15px;
     align-content: center;
     align-items: baseline;
@@ -95,6 +95,10 @@ transform: scale(.7);
     }
     .btnsAddress{
         margin-top: -80px;
+    }
+    .Columnas {
+        margin-top: -50px;
+        gap: 10px;
     }
 }
 /*----------Media Queries (MEDIUM DEVICES) ----------*/
