--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -141,7 +141,7 @@
 }
 
 .card2 {
-  background-image: url('../../assets/fotoAngelo.jpg');
+  background-image: url('../../assets/fotoAngelo3.png');
   background-position: 53%;
   background-position-y: 17%;
   background-size: 128%;
